refine ui on login signup added multiple icon resources added cart and profile activity

--- a/grabbit/app/src/main/res/values/strings.xml
+++ b/grabbit/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="navigationAccount">Account</string>
     <string name="navigationHome">Home</string>
     <string name="navigationCart">Cart</string>
+    <string name="checkout">Checkout</string>
+
 </resources>
