added button to add balance to wallet in information activity remove warnings form xml

--- a/grabbit/app/src/main/res/values/strings.xml
+++ b/grabbit/app/src/main/res/values/strings.xml
@@ -13,5 +13,10 @@
     //Cart
     <string name="appBarCart">Cart</string>
     <string name="cartInstructions">1. Refresh the list\n 2. Search for bluetooth device named 20-18-08-34-F7-3C\n 3. Connect to 20-18-08-34-F7-3C\n 4. After successful connection click on start dispensing   item</string>
+    <string name="scan_qr_code_to_get_product_list">Scan QR code to get product list</string>
+    <string name="scan">Scan</string>
+    <string name="transactions">Transactions</string>
+    <string name="add_balance">Add balance</string>
+    <string name="item_purchased">Item purchased</string>
 
 </resources>
