Refactored ui of cart

--- a/grabbit/app/src/main/res/values/strings.xml
+++ b/grabbit/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
     <string name="bnAccount">Profile</string>
 
     <string name="productContentDescription">Product Image</string>
+    <string name="noDataAvailable">No products in cart</string>
 
 </resources>
