Added TransactionDetail activity, api and refactored code for itemDispenseActivity

--- a/grabbit/app/src/main/res/values/strings.xml
+++ b/grabbit/app/src/main/res/values/strings.xml
@@ -33,4 +33,6 @@
     <string name="processingTransaction">Please do not press back button or refresh page \nProcessing Paytm Transaction</string>
 
     <string name="transactionDetails">Transaction Details</string>
+
+    <string name="itemDispenseScreenName">Item Dispensing</string>
 </resources>
