--- a/grabbit/app/src/main/res/values/strings.xml
+++ b/grabbit/app/src/main/res/values/strings.xml
@@ -38,4 +38,6 @@
     <string name="paymentMode">Payment mode: </string>
     <string name="quantity">Quantity: </string>
     <string name="itemPurchasedQuantity">1</string>
+    <string name="noTransactionsDone">No transactions done</string>
+
 </resources>
