Logout button added on information activity page

--- a/grabbit/app/src/main/res/values/strings.xml
+++ b/grabbit/app/src/main/res/values/strings.xml
@@ -39,5 +39,7 @@
     <string name="quantity">Quantity: </string>
     <string name="itemPurchasedQuantity">1</string>
     <string name="noTransactionsDone">No transactions done</string>
+    <string name="logout">Logout</string>
+
 
 </resources>
