Modified: Qr code scanner activity added finish activity on back pressed, Added account page for operator, Added logout for operator from account page, Refactored code

--- a/grabbit/app/src/main/res/values/strings.xml
+++ b/grabbit/app/src/main/res/values/strings.xml
@@ -48,6 +48,9 @@
     <string name="ProductDetailPage">Product detail</string>
     <string name="KioskIdTemplate">Kiosk Id %s</string>
     <string name="ProductName">Product name : %s</string>
-<!--    ": $product!!.KioskID"-->
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!--    ": $product!!.KioskID"-->
 
 </resources>
